--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body id="gradient">
-    <h1>Gradient Background Generator</h1>
+    <h1>test Background Generator</h1>
     <input type="color" name="color1" id="color1" value="#00ff00">
     <input type="color" name="color2" id="color2" value="#ff0000">
 
