--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <input type="color" name="color1" id="color1" value="#00ff00">
     <input type="color" name="color2" id="color2" value="#ff0000">
 
-    <h2>Current CSS Background</h2>
+    <h2>so colorful naman nito</h2>
     <h3>Color: </h3>
 
     
